--- a/resources/db.properties
+++ b/resources/db.properties
@@ -4,9 +4,9 @@
 #jdbc.password = admin
 
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/zone?useUnicode=true&characterEncoding=utf8
+jdbc.url = jdbc:mysql://localhost:3306/zbase?useUnicode=true&characterEncoding=utf8
 jdbc.username = root
-jdbc.password = 123456
+jdbc.password = Zong
 
 mongo.host = 192.168.128.1
 
